# fraud-intel

./: .env.sample  .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
datasets/analyst_notes/: case_a_note.txt
datasets/cases/case_a/: accounts.json  behavioral.json  device_network.json  identity.json  link_graph.json  model_rules.json  transactions.json
datasets/cases/case_b/: accounts.json  behavioral.json  device_network.json  identity.json  link_graph.json  model_rules.json
datasets/cases/case_c/: accounts.json  behavioral.json  device_network.json  identity.json  link_graph.json  model_rules.json  transactions.json
datasets/labels/: case_a_labels.json  case_b_labels.json  case_c_labels.json
docs/: DEMO.md  PROMPT.md  SCENARIO.md
scripts/postgres/: init-phoenix-db.sh
src/core/: config.py  data_loader.py  instrumentation.py
src/modules/: contradiction_checker.py  hypothesis_generator.py  narrative_drafter.py
